--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,15 @@ add_executable(${PROJECT_NAME}
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE include)
+
+# Example: Using vcpkg dependencies
+#
+# find_package(SFML 2.6 COMPONENTS system window graphics CONFIG REQUIRED)
+# find_package(EnTT CONFIG REQUIRED)
+#
+# target_link_libraries(${PROJECT_NAME} PRIVATE
+#   fml::system
+#   sfml::window
+#   sfml::graphics
+#   EnTT::EnTT
+# )
